Fixed some overlap of the graphs and text.

--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,6 @@
-#hydrogen-cation-energy-chart {
+.hydrogen-cation-chart {
     width: 100%;
     max-width: 600px;
-    aspect-ratio: 1 / 1;
 }
 
 #radius {
@@ -12,6 +11,7 @@
 .graph_container {
     width: 100%;
     max-width: 600px;
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
